# pythontest

./: __init__.py  bootstrap.py  bootstrap.py~  i18n.py  pythontest.sql  requirement.txt  service.py  setup.cfg  uwsgi.ini
agent/: bootstrap.py  entry_points.txt  i18n.py  nmc_agent.ini  requirement.txt  setup.cfg  setup.py
agent/common/: configs.py  errors.py
agent/common/api/: response.py
agent/libvirt/: guest.py
agent/nmc_agent.egg-info/: entry_points.txt
agent/transport/: __init__.py  base.py
agent/transport/wsgi/: __init__.py  app.py  driver.py  user.py  utils.py
api/: endpoints.py  handler.py
common/: configs.py  consts.py  errors.py
common/api/: utils.py
pythontest.egg-info/: entry_points.txt
storage/: .tables.py.swp  __init__.py  base.py  business.py  cfg_notify.py  controller.py  driver.py  errors.py  manualsync.py  options.py  tables.py  user.py  utils.py
test/: things.ini  things.py
transport/: base.py
transport/wsgi/: app.py  business.py  cfg_notify.py  driver.py  manualsync.py  user.py
