[metadata]
name = pythontest
version = 0.6
summary = test
description-file = 
	README.rst
classfilter = 
	Environment :: test
	Intended Audience :: Information Technology
	Intended Audience :: System Administractors
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programing Language :: Python

[files]
packages = 
	pythontest

[entry_points]
pythontest.transport = 
	wsgi = pythontest.transport.wsgi.driver:Driver

oslo.config.opts = 
	pythontest.common.configs = pythontest.common.configs:_config_options
	pythontest.common.sqlalchemy = pythontest.storage.options:_config_options
	pythontest.transport.wsgi = pythontest.transport.wsgi.driver:_config_options
	pythontest.transport.base = pythontest.transport.base:_config_options
