[metadata]
name = nmc_agent
version = 0.6
summary = test
description-file = 
	README.rst
classfilter = 
	Environment :: test
	Intended Audience :: Information Technology
	Intended Audience :: System Administractors
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programing Language :: Python

[files]
packages = 
	nmc_agent

[entry_points]
nmc_agent.transport = 
	wsgi = nmc_agent.transport.wsgi.driver:Driver

oslo.config.opts = 
	nmc_agent.common.configs = nmc_agent.common.configs:_config_options
	nmc_agent.common.sqlalchemy = nmc_agent.storage.options:_config_options
	nmc_agent.transport.wsgi = nmc_agent.transport.wsgi.driver:_config_options
	nmc_agent.transport.base = nmc_agent.transport.base:_config_options
